# byTech_MSClarity_MCPServer

./: .dxtignore  .gitignore  .npmignore  README.md  main.py  manifest.json  pyproject.toml  sample.html  test_server.py  vercel.json  このMCPサーバの役割.txt
api/: index.py
clarity_mcp_server/: __init__.py  __main__.py  api_client.py  cli.py  http_server.py  server.py
