[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clarity-mcp-server"
version = "1.0.1"
description = "MCP Server to fetch Microsoft Clarity analytics data based on data export API"
authors = [
    {name = "Microsoft", email = "noreply@microsoft.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "httpx==0.25.2",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "typing-extensions==4.8.0",
]

[project.scripts]
clarity-mcp-server = "clarity_mcp_server.cli:main"

[project.urls]
Homepage = "https://github.com/microsoft/clarity-mcp-server"
Repository = "https://github.com/microsoft/clarity-mcp-server.git"
Issues = "https://github.com/microsoft/clarity-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["clarity_mcp_server*"]

[tool.setuptools.package-data]
"clarity_mcp_server" = ["*.txt", "*.md"]
